log
vi., 10 de mar. de 2023  8:52:30: 
 tests:  0|7
total_score: 0/70
93b9ab2
Fri 10 Mar 2023 09:38:47 PM UTC: 
 tests:  0|7
total_score: 0/70
3f6be67
Fri 10 Mar 2023 10:24:46 PM UTC: 
 tests:  0|7
total_score: 0/70
c9b73da
Fri 10 Mar 2023 10:31:20 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:12: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   16 | int acopia=a , bcopia=b;
      |            ^
exercises.c:16:23: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   16 | int acopia=a , bcopia=b;
      |                       ^
exercises.c:17:4: error: comparison between pointer and integer [-Werror]
   17 |   a==bcopia;
      |    ^~
exercises.c:17:4: error: statement with no effect [-Werror=unused-value]
   17 |   a==bcopia;
      |   ~^~~~~~~~
exercises.c:18:4: error: comparison between pointer and integer [-Werror]
   18 |   b==acopia;
      |    ^~
exercises.c:18:4: error: statement with no effect [-Werror=unused-value]
   18 |   b==acopia;
      |   ~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0c97171
Fri 10 Mar 2023 10:31:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:4: error: comparison between pointer and integer [-Werror]
   17 |   a==bcopia;
      |    ^~
exercises.c:17:4: error: statement with no effect [-Werror=unused-value]
   17 |   a==bcopia;
      |   ~^~~~~~~~
exercises.c:18:4: error: comparison between pointer and integer [-Werror]
   18 |   b==acopia;
      |    ^~
exercises.c:18:4: error: statement with no effect [-Werror=unused-value]
   18 |   b==acopia;
      |   ~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7ed8d60
Fri 10 Mar 2023 10:32:16 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:5: error: statement with no effect [-Werror=unused-value]
   17 |   *a==bcopia;
      |   ~~^~~~~~~~
exercises.c:18:5: error: statement with no effect [-Werror=unused-value]
   18 |   *b==acopia;
      |   ~~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5b115e0
Fri 10 Mar 2023 10:32:33 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
3f11793
Sun 12 Mar 2023 05:54:31 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
8ca6bdd
